Added Some content in Sarah Responsive website template

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- fevicon icon add code -->
-    <link rel="icon" href="assets/img/cow-icon.png">
-    
+    <link rel="icon" href="assets/img/wp.png">
+
     <title>Sarah Farm Limited</title>
     <!-- google fonts link -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -37,6 +37,21 @@
         </div>
       </div>
   </nav>
+  <!-- ====Header section code start==== -->
+  <header>
+    <section class="header-inner container">
+      <h2 class="title">
+        Welcome to Sarah Farm
+      </h2>
+      <h1>
+        Your Trusted Source for Fresh Milk Products!
+      </h1>
+      <p>
+        At Sarah Farm, we pride ourselves on delivering the finest quality milk products directly to your doorstep. With our dedication to sustainable farming practices and our commitment to the well-being of our cows, we ensure that every product you receive is not only delicious but also ethically produced.
+      </p>
+    </section>
+  </header>
+  <!-- ====Header section code start==== -->
     
     <script src="assets/js/script.js"></script>
 </body>
