--- a/index.html
+++ b/index.html
@@ -7,52 +7,220 @@
     <!-- fevicon icon add code -->
     <link rel="icon" href="assets/img/wp.png">
 
-    <title>Sarah Farm Limited</title>
+    <title>REY EXPRESS</title>
     <!-- google fonts link -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- fonts awesome link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
+    <!-- bootstrap css link  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!-- custom css link -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <nav>
-      <div class="navbar container">
-        <div class="brand-logo">
-          <a href="javascript:void(0)">Sarah Farm</a>
-        </div>
-        <div class="nav-links">
-          <ul>
-            <li><a href="javascript:void(0)">Home</a></li>
-            <li><a href="javascript:void(0)">About</a></li>
-            <li><a href="javascript:void(0)">Services</a></li>
-            <li><a href="javascript:void(0)">Products</a></li>
-            <li><a href="javascript:void(0)">Community</a></li>
-            <li><a href="javascript:void(0)">Contact</a></li>
-          </ul>
-        </div>
-        <div class="toggle-btn">
-          <span></span>
-          <span></span>
-        </div>
+  <!-- nav section start -->
+  <nav class="navbar navbar-expand-lg ">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        REY <span>EXPRESS</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar">
+        <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#">PRODUCT & FINISHES</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">SHOP</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">WHY REY-XPRESS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">TUTORIALS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">CONTACT</a>
+          </li>
+        </ul>
+        <ul class="top-links d-flex">
+          <li><a href="#account"><i class="fa-regular fa-user"></i> SIGN IN / CREATE ACCOUNT</a></li>
+          <li><a href="#"><i class="fa-regular fa-folder-open"></i> PROJECTS</a></li>
+          <li><a href="#"><i class="fa-solid fa-cart-arrow-down"></i> SHOPPING CART</a></li>
+        </ul>
       </div>
+    </div>
   </nav>
+  <!-- nav section code end -->
   <!-- ====Header section code start==== -->
   <header>
-    <section class="header-inner container">
-      <h2 class="title">
-        Welcome to Sarah Farm
-      </h2>
-      <h1>
-        Your Trusted Source for Fresh Milk Products!
-      </h1>
-      <p>
-        At Sarah Farm, we pride ourselves on delivering the finest quality milk products directly to your doorstep. With our dedication to sustainable farming practices and our commitment to the well-being of our cows, we ensure that every product you receive is not only delicious but also ethically produced.
-      </p>
+    <section class="container pt-5">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="header-content pt-5 mt-5">
+            <h2 class="display-5 pt-5 mt-5 text-light">
+              MADE-TO-ORDER 
+              CABINETS AND 
+              MILLWORK, WITHOUT 
+              THE SHOWROOM 
+              MARKUP
+            </h2>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="order pt-5 mt-5">
+            <div class="order-click text-center">
+              <a href="javascript:void(0)">ORDER <span>NOW!</span></a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </header>
-  <!-- ====Header section code start==== -->
-    
+  <!-- ====Header section code end==== -->
+  <!-- millwork section start -->
+  <section class="millwork py-5">
+    <section class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="card-content">
+            <h2 class="display-5">
+              STUNNING CABINETRY 
+              AND MILLWORK, 
+              SIMPLIFIED PROCESS
+            </h2>
+            <p class="my-4 pt-4">
+              At Rey-Xpress we’re all about making things 
+              easy for you. We want dealing with us to be a 
+              totally zen experience: We want choosing your 
+              cabinets to be a joy, ordering to be a piece of 
+              cake and delivery and installation to be a 
+              breeze. An easy-to-use online portal with 
+              made-to-order cabinets and millwork, without 
+              the showroom markup.
+            </p>
+            <a href="javascript:void(0)">ORDER NOW!</a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card-img">
+            <img src="assets/img/anime.jpg" alt="Card Image">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <div class="title">
+            <h2 class="display-1 py-5">
+              DESIGNED FOR TRADE
+              PROFESSIONALS
+            </h2>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="card-carrosel py-5">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="assets/img/carrosel-1.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="assets/img/carrosel-2.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="assets/img/carrosel-3.jpg" alt="Third slide">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card-content py-5">
+            <h2 class="display-5 pe-4">
+              YOU OWN/WORK
+              FOR A TRADE OR 
+              CONSTRUCTION 
+              BUSINESS
+            </h2>
+            <p class="my-4 pt-4">
+              At Rey-Xpress we’re all about making things 
+              easy for you. We want dealing with us to be a 
+              totally zen experience: We want choosing your 
+              cabinets to be a joy, ordering to be a piece of 
+              cake and delivery and installation to be a 
+              breeze. An easy-to-use online portal with 
+              made-to-order cabinets and millwork, without 
+              the showroom markup.
+            </p>
+            <a href="javascript:void(0)">register today!</a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="card-content py-5">
+            <h2 class="display-5 pe-4">
+              A MODERN AND 
+              CONVENIENT
+              APPROACH TO 
+              ORDER CABINETS 
+              AND MILLWORK
+            </h2>
+            <p class="my-4 pt-4">
+              We've revamped the entire cabinet and 
+              millwork ordering process, tailoring it around 
+              your needs. We simplified cabinet and millwork 
+              manufacturing to offer studio-quality cabinets 
+              at prices you'll love.
+            </p>
+            <ul>
+              <li>Build, track and save projects in one place.</li>
+              <li>Significant cost savings, passed directly 
+                to you.</li>
+              <li>Exceptional quality.</li>
+            </ul>
+            <a href="javascript:void(0)">register today!</a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card-img py-5">
+            <img src="assets/img/drawer.jpg" alt="Card Image">
+          </div>
+        </div>
+      </div>
+    </section>
+  </section>
+  <!-- millwork section end -->
+  <!-- advantage section start -->
+  <section class="advantage py-5">
+    <div class="title">
+      <h2>ADVANTAGE</h2>
+    </div>
+    </section>
+  </section>
+  <!-- advantage section end -->
+
+    <!-- bootstrap js link -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
+    <!-- custom js link -->
     <script src="assets/js/script.js"></script>
 </body>
 </html>
